# grpc_gateway_demo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
cmake/: dependencies.cmake  utils.cmake
cmake/public/: gflags.cmake  glog.cmake  grpc.cmake  protobuf.cmake  threads.cmake
config/: nginx.conf
docker/common/: Dockerfile
docker/grpc_gateway/: Dockerfile
docker/grpc_server/: Dockerfile
docker/nginx/: Dockerfile
grpc_gateway_demo/: .clang-format  CMakeLists.txt
grpc_gateway_demo/grpc_gateway/gateway/: gateway.go  handlers.go  main.go
grpc_gateway_demo/grpc_gateway/proxy_server/: handlers.go  main.go
grpc_gateway_demo/lib/: CMakeLists.txt
grpc_gateway_demo/lib/core/: CMakeLists.txt  thread_pool.cc  thread_pool.h  thread_pool_test.cc
grpc_gateway_demo/proto/: demo_service.proto
grpc_gateway_demo/serving/: CMakeLists.txt  demo_service_impl.cc  demo_service_impl.h  grpc_test_client.cc  main.cc  server.cc  server.h
k8s/: grpc_gateway_demo.yaml  grpc_gateway_demo_storage.yaml  nginx.yaml
public/: index.html
public/js/: index.js
